Making timeline bigger so it's not hidden under loading. Fixing livereload.

--- a/x-platform/public/dm-xplayer/directives/dm-timeline/dm-timeline.less
+++ b/x-platform/public/dm-xplayer/directives/dm-timeline/dm-timeline.less
@@ -1,8 +1,8 @@
 dm-timeline {
   position: absolute;
   width: 100%;
-  bottom: 6px;
-  height: 10px;
+  bottom: 15px;
+  height: 12px;
   left: 0;
 
   .progress {
