--- a/x-platform/public/dm-xplayer/directives/dm-xplayer-timeline/dm-xplayer-timeline.less
+++ b/x-platform/public/dm-xplayer/directives/dm-xplayer-timeline/dm-xplayer-timeline.less
@@ -14,8 +14,10 @@
     float: left;
     padding: 2px;
     width: 25px;
-    height: 21px;
+    height: 38px;
     overflow: hidden;
+    line-height: 38px;
+    font-size: 13px;
 
     &.big {
       width: 55px;
